error.log
File "app/bots/test/test_bots.ml", line 105, characters 13-14:
105 |              }
                   ^
Error: Syntax error
File "lib/order_book/src/order_book.ml", line 1:
Error: The implementation "lib/order_book/src/order_book.ml"
       does not match the interface "lib/order_book/src/.jsip_order_book.objs/byte/jsip_order_book__Order_book.cmi":
        The value "remove" is required but not provided
       File "lib/order_book/src/order_book.mli", line 26, characters 0-36:
         Expected declaration
File "lib/gateway/src/participant_state.ml", line 1:
Error: The implementation "lib/gateway/src/participant_state.ml"
       does not match the interface "lib/gateway/src/.jsip_gateway.objs/byte/jsip_gateway__Participant_state.cmi":
        Values do not match:
          val remove_order : ('a, 'b) Base.Hashtbl.t -> 'a -> unit
        is not included in
          val remove_order : t -> Jsip_types.Client_order_id.t -> unit
        The type "('a, 'b) Base.Hashtbl.t -> 'a -> unit"
        is not compatible with the type
          "t -> Jsip_types.Client_order_id.t -> unit"
        Type "('a, 'b) Base.Hashtbl.t" is not compatible with type "t"
        File "lib/gateway/src/participant_state.mli", line 10, characters 0-49:
          Expected declaration
        File "lib/gateway/src/participant_state.ml", line 20, characters 4-16:
          Actual declaration
File "lib/gateway/src/dispatcher.ml", line 4, characters 0-22:
4 | open Participant_state
    ^^^^^^^^^^^^^^^^^^^^^^
Error (warning 33 [unused-open]): unused open Participant_state.
File "lib/gateway/src/exchange_server.ml", line 126, characters 6-10:
126 |   let book = Matching_engine.book engine in
            ^^^^
Error (warning 26 [unused-var]): unused variable book.

File "lib/gateway/src/exchange_server.ml", line 128, characters 6-18:
128 |   let event_reader, event_writer = Pipe.create () in
            ^^^^^^^^^^^^
Error (warning 27 [unused-var-strict]): unused variable event_reader.
File "lib/test_harness/src/e2e_helpers.ml", line 21, characters 11-30:
21 |   let%bind (_ : Participant.t) =
                ^^^^^^^^^^^^^^^^^^^
Error: This pattern matches values of type "Participant.t"
       but a pattern was expected which matches values of type
         "Participant.t Or_error.t" = "(Participant.t, Core.Error.t) result"
File "app/monitor/src/event_log.ml", lines 18-21, characters 41-61:
18 | .........................................function
19 |     | Order_accept _ | Order_cancel _ | Order_reject _ -> Order_lifecycle
20 |     | Fill _ -> Trade
21 |     | Best_bid_offer_update _ | Trade_report _ -> Market_data
Error (warning 8 [partial-match]): this pattern-matching is not exhaustive.
Here is an example of a case that is not matched:
Cancel_reject _

File "app/monitor/src/event_log.ml", lines 46-52, characters 41-31:
46 | .........................................function
47 |     | Order_accept _ -> Green
48 |     | Fill _ -> Cyan
49 |     | Order_cancel _ -> Yellow
50 |     | Order_reject _ -> Red
51 |     | Best_bid_offer_update _ -> Blue
52 |     | Trade_report _ -> Magenta
Error (warning 8 [partial-match]): this pattern-matching is not exhaustive.
Here is an example of a case that is not matched:
Cancel_reject _
File "lib/test_harness/src/harness.ml", lines 38-44, characters 2-3:
38 | ..{ symbol
39 |   ; participant
40 |   ; side
41 |   ; price = Price.of_int_cents price_cents
42 |   ; size = Size.of_int size
43 |   ; time_in_force
44 |   }
Error: Some record fields are undefined: "client_order_id"
File "lib/order_book/test/test_order_book.ml", lines 15-21, characters 5-6:
15 | .....{ symbol = Harness.aapl
16 |      ; participant
17 |      ; side
18 |      ; price = Price.of_int_cents price_cents
19 |      ; size = Size.of_int size
20 |      ; time_in_force = Day
21 |      }
Error: Some record fields are undefined: "client_order_id"
File "lib/gateway/test/test_protocol.ml", lines 17-23, characters 12-13:
17 | ............{ symbol = Symbol.of_string "AAPL"
18 |             ; participant = Participant.of_string "Alice"
19 |             ; side = Buy
20 |             ; price = Price.of_int_cents 15000
21 |             ; size = Size.of_int 100
22 |             ; time_in_force = Day
23 |             }
Error: Some record fields are undefined: "client_order_id"
File "lib/gateway/test/test_exchange_command.ml", lines 9-14, characters 2-81:
 9 | ..match Exchange_command.parse ?default_participant line with
10 |   | Error err -> print_endline [%string "ERROR: %{Error.to_string_hum err}"]
11 |   | Ok (Exchange_command.Submit req) ->
12 |     print_endline [%string "%{req#Order.Request}"]
13 |   | Ok (Book symbol) -> print_endline [%string "BOOK %{symbol#Symbol}"]
14 |   | Ok (Subscribe symbol) -> print_endline [%string "SUBSCRIBE %{symbol#Symbol}"]
Error (warning 8 [partial-match]): this pattern-matching is not exhaustive.
Here is an example of a case that is not matched:
Ok (Cancel _)
File "lib/types/test/test_fill.ml", lines 6-15, characters 5-6:
 6 | .....{ fill_id = 1
 7 |      ; symbol = Symbol.of_string "AAPL"
 8 |      ; price = Price.of_int_cents 15025
 9 |      ; size = Size.of_int 100
10 |      ; aggressor_order_id = Order_id.of_string "1"
11 |      ; aggressor_participant = Participant.of_string "Alice"
12 |      ; aggressor_side = Buy
13 |      ; resting_order_id = Order_id.of_string "2"
14 |      ; resting_participant = Participant.of_string "Bob"
15 |      }
Error: Some record fields are undefined: "aggressor_client_order_id"
       "resting_client_order_id"
File "lib/types/test/test_order.ml", lines 15-21, characters 2-3:
15 | ..{ symbol = Symbol.of_string symbol
16 |   ; participant = Participant.of_string participant
17 |   ; side
18 |   ; price = Price.of_int_cents price_cents
19 |   ; size = Size.of_int size
20 |   ; time_in_force
21 |   }
Error: Some record fields are undefined: "client_order_id"
File "lib/order_book/bench/bench_order_book.ml", lines 57-63, characters 8-9:
57 | ........{ symbol = aapl
58 |         ; participant = bob
59 |         ; side = Sell
60 |         ; price = Price.of_int_cents (min_price + i)
61 |         ; size = Size.of_int 100
62 |         ; time_in_force = Day
63 |         }
Error: Some record fields are undefined: "client_order_id"
File "app/client/bin/main.ml", lines 61-104, characters 10-21:
 61 | ..........(match result with
 62 |            | Book symbol ->
 63 |              let%bind result =
 64 |                Rpc.Rpc.dispatch_exn Rpc_protocol.book_query_rpc conn symbol
 65 |              in
...
101 |                  conn
102 |                  request
103 |              in
104 |              loop ()).
Error (warning 8 [partial-match]): this pattern-matching is not exhaustive.
Here is an example of a case that is not matched:
Cancel _



(lang dune 3.0)

(generate_opam_files true)

(maintainers "JSIP Organizers")

(authors "JSIP Organizers")

(homepage "https://github.com/jane-street-immersion-program/jsip-exchange/")

(bug_reports
 "https://github.com/jane-street-immersion-program/jsip-exchange/issues")

(license MIT)

(package
 (name jsip-exchange)
 (synopsis "An project building a financial exchange in OCaml")
 (depends
  (ocaml
   (>= 5.2.0))
  dune
  ocaml-lsp-server
  ocamlformat
  (odoc :with-doc)
  async
  async_log
  async_rpc_kernel
  async_rpc_websocket
  bonsai
  bonsai_term
  bonsai_term_components
  bonsai_web
  virtual_dom
  cohttp-async
  core
  core_unix
  core_bench
  ppx_jane
  ppx_html
  js_of_ocaml-ppx
  (bin_prot :with-test)
  (notty-community :with-test)
  (expect_test_helpers_core :with-test)
  (expect_test_helpers_async :with-test)))
